hw-13-spring - добавлен jackson вместо gson, подружен со spring; отдельная модель для маппинга user в json; подправлен фронт; логирование

--- a/hw13-spring/src/main/resources/WEB-INF/templates/index.html
+++ b/hw13-spring/src/main/resources/WEB-INF/templates/index.html
@@ -9,11 +9,11 @@
 <div id="app">
     <div style="border: red 2px">
         <p>Новый пользователь</p>
-        <input type="text" v-model="newUser.name" placeholder="Имя"/><br>
-        <input type="number" v-model="newUser.age" placeholder="Возраст"><br>
-        <input type="text" v-model="newUser.address.street" placeholder="Адрес"><br>
-        <div v-for="phone in newUser.phones">
-            <input type="number" v-model="phone.number" placeholder="Телефон"><br>
+        <input type="text" v-model="newUser.userName" placeholder="Имя"/><br>
+        <input type="number" v-model="newUser.userAge" placeholder="Возраст"><br>
+        <input type="text" v-model="newUser.userAddress" placeholder="Адрес"><br>
+        <div v-for="phone in newUser.userPhones">
+            <input type="text" v-model="phone.number" placeholder="Телефон"><br>
         </div>
 
         <button v-on:click="saveUser">Сохранить пользователя</button>
@@ -21,8 +21,8 @@
     <table>
         <p>Список пользователей</p>
         <tr v-for="user in users">
-            <td>{{ user.name }}</td>
-            <td>{{ user.phones }}</td>
+            <td>{{ user.userName }}</td>
+            <td>{{ user.userPhones }}</td>
         </tr>
     </table>
     <button v-on:click="loadData">Загрузить данные</button>
